[package]
name = "jito-protos"
description = "Protobufs for working with block engine"
version = "0.2.2"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true }
