[package]
name = "jito-shredstream-proxy"
version = "0.2.2"
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://jito-labs.gitbook.io/mev/searcher-services/shredstream for details."
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"

[dependencies]
arc-swap = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
hostname = { workspace = true }
jito-protos = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
signal-hook = { workspace = true }
solana-client = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
solana-net-utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
name = "jito_shredstream_proxy"
path = "src/lib.rs"
